[package]
name = "blockchain-rs"
version = "0.1.1"
authors = ["Afnan Enayet <afnan.enayet@gmail.com>"]

[dependencies]
serde_json = "1.0"
pencil = "0.3.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "0.2.9"

[lib]
name = "rustchain"
path = "src/lib.rs"

[[bin]]
name = "rustchain-web"
path = "src/main.rs"

